<resources>
    <string name="app_name">Ludo</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register"><u>don\'t have an account? Register</u></string>
    <string name="name">Name</string>
    <string name="confirmpassword">"Confirm Password"</string>
    <string name="dob">DOB: DD/MM/YYYY</string>
    <string name="submit">SUBMIT</string>
    <string name="gender">Gender</string>
</resources>