<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="445dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:padding="25dp">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/name"
            android:inputType="text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/gender"
            android:inputType="text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/dob"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/dob"
            android:inputType="date"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:inputType="text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/confirmpassword"
            android:inputType="textPassword"
            android:textSize="16sp" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundcornerbutton"
            android:padding="10dp"
            android:text="@string/submit"
            android:textSize="24sp" />


    </LinearLayout>
</LinearLayout>